# aster

./: CMakeLists.txt  README.md  README_devs.md
.github/workflows/: intel-amx.yml  pull-rebase.yml
contrib/kittens/: gemm_config.py  rocprof-kittens-bench.sh
contrib/kittens/test/: gemm_f16_32x32_k_loop_helpers.mlir  gemm_f16_k_loop_helpers.mlir  kittens_helpers.py  test_001_gemm_fp16_lds_1buf.py  test_005_gemm_fp16_lds_pipelined.py  test_008_lds_roundtrip.mlir  test_009_gemm_fp16_lds_1buf.mlir  test_010_gemm_fp16_lds_2buf.mlir  test_011_gemm_fp16_lds_3buf.mlir  test_012_lds_roundtrip_xor.mlir  test_013_gemm_fp16_2wave_lds.mlir  test_014_gemm_fp16_lds_pipelined.mlir  test_016_gemm_fp16_multitile_lds_pipelined.mlir  test_017_gemm_fp16_multitile_4x4_lds_pipelined.mlir  test_018_gemm_fp16_4wave_lds_pipelined.mlir  test_024_gemm_fp8_lds_1buf.mlir  test_102_gemm_python_multitile.py  test_102_gemm_python_multitile_cdna4.py  test_103_gemm_python_multitile_ping_pong.py  test_perf_001_gemm_fp16_weak_scaled.mlir  test_perf_001_gemm_fp16_weak_scaled.py  test_perf_002_gemm_fp16_weak_scaled.mlir  test_perf_002_gemm_fp16_weak_scaled.py
contrib/kittens/test/bench/: bench_harness.py  bench_perf_001_gemm_fp16_weak_scaled.py  bench_perf_102_gemm_python_multitile.py  bench_perf_102_gemm_python_multitile_cdna4.py  bench_perf_103_gemm_python_multitile_ping_pong.py  bench_perf_sweep_001_gemm_fp16_weak_scaled.py  bench_sweep_heuristic.py  smoke-check.sh  sweep_harness.py
contrib/mlir-air/: CMakeLists.txt  README.md
contrib/mlir-air/lib/: ConvertLinalgToAMDGCN.cpp  Init.cpp  Pipelines.cpp
contrib/mlir-air/test/: linalg-to-amdgcn.mlir
contrib/mlir-air/test/integration/: test_linalg_matmul_e2e.py
contrib/mlir-air/tools/: mlir-air-opt.cpp
examples/: README.md  _gpu_runner.py  common.py  profile.sh
examples/01_hello_asm/: README.md  kernel.mlir  run.py
examples/02_nop_insertion/: README.md  kernel.mlir  run.py
examples/05_python/: README.md  run.py
include/aster/: Init.h
include/aster/Analysis/: DPSAnalysis.h  ThreadUniformAnalysis.h
include/aster/IR/: CFG.h  RewriteUtils.h
include/aster/Interfaces/: RegisterType.td
include/aster/Transforms/: MemRefUtils.h  Passes.td
lib/: Init.cpp
lib/Analysis/: DPSAnalysis.cpp  LivenessAnalysis.cpp  MemoryDependenceAnalysis.cpp  ThreadUniformAnalysis.cpp
lib/CodeGen/: Legalizer.cpp  TypeConverter.cpp
lib/Dialect/AMDGCN/Analysis/: HazardAnalysis.cpp
lib/Dialect/AMDGCN/CodeGen/: CodeGenPatterns.cpp
lib/Dialect/AMDGCN/IR/: AMDGCN.cpp  AMDGCNAttrs.cpp  AMDGCNTypes.cpp  AMDGCNVerifiers.cpp  CMakeLists.txt  Hazards.cpp  Sched.cpp  SchedAttrs.cpp  Utils.cpp
lib/Dialect/AMDGCN/Transforms/: AMDGCNBufferization.cpp  AMDGCNHazards.cpp  AttachScheduler.cpp  CMakeLists.txt  ConvertSCFControlFlow.cpp  ExpandMetadataOps.cpp  LDSAlloc.cpp  LegalizeCF.cpp  LowLevelScheduler.cpp  LowerSRegBlockArgs.cpp  Mem2Reg.cpp  OptimizeAMDGCN.cpp  Pipelines.cpp  RegisterColoring.cpp  SetNormalForms.cpp  ToAMDGCN.cpp  ToAMDGCNPatterns.cpp  ToRegisterSemantics.cpp  WaitInsertion.cpp
lib/Dialect/AsterUtils/IR/: AsterUtilsAttrs.cpp  AsterUtilsOps.cpp  CMakeLists.txt  IntRangeImpl.cpp
lib/Dialect/AsterUtils/Transforms/: AsterSelectiveInlining.cpp  CMakeLists.txt  Transforms.cpp
lib/Dialect/LSIR/IR/: LSIROps.cpp
lib/Interfaces/: CMakeLists.txt  SchedInterfaces.cpp  UpstreamModelsImpl.cpp
lib/Transforms/: AffineOptimizePtrAdd.cpp  CMakeLists.txt  DecomposeAffineApply.cpp  DecomposeMemrefIterArgs.cpp  MemRefUtils.cpp  OptimizeArith.cpp  SCFPipelineAsterSched.cpp  SimplifyAllocaIterArgs.cpp  ToIntArith.cpp
llvm/: CMakeLists.txt  LLVM_COMMIT
mlir_kernels/benchmarks/: benchmark_utils.py
mlir_kernels/test/unit/: test_scf_pipeline.py  test_scf_pipeline_gaps.py  test_scf_pipeline_iter_args.py  test_scf_pipeline_lds.py
python/aster/: hip.py  pass_pipelines.py  test_pass_pipelines.py  utils.py
python/aster/compiler/: metadata.py
python/aster/core/: target.py
python/aster/dialects/: kernel_builder.py
python/aster/layout/: algebra.py
test/: lit.cfg.py  lit.site.cfg.py.in
test/Analysis/: dps-analysis.mlir
test/CodeGen/: legalization.mlir
test/Dialect/AMDGCN/: canonicalize.mlir  cdna3-ops.mlir  cmp-ops.mlir  ops.mlir
test/Dialect/AMDGCN/Analysis/: cdna3-hazards.mlir  hazard-analysis.mlir  register-interference.mlir  register-liveness.mlir  wait-analysis.mlir
test/Dialect/AMDGCN/IR/: normal-forms-all-inlined-invalid.mlir  normal-forms-module-invalid.mlir  normal-forms-module.mlir  normal-forms-no-affine-ops-invalid.mlir  normal-forms-no-affine-ops.mlir  normal-forms-no-cf-branches-invalid.mlir  normal-forms-no-cf-branches.mlir  normal-forms-no-lsir-compute-ops-invalid.mlir  normal-forms-no-lsir-compute-ops.mlir  normal-forms-no-lsir-control-ops-invalid.mlir  normal-forms-no-lsir-control-ops.mlir  normal-forms-no-lsir-ops-invalid.mlir  normal-forms-no-lsir-ops.mlir  normal-forms-no-metadata-ops-invalid.mlir  normal-forms-no-metadata-ops.mlir  normal-forms-no-register-block-args-invalid.mlir  normal-forms-no-register-block-args.mlir  normal-forms-no-scf-ops-invalid.mlir  normal-forms-no-scf-ops.mlir  sopp-setprio-sleep-wakeup.mlir
test/Dialect/AMDGCN/Transforms/: bufferization-nf.mlir  bufferization.mlir  convert-scf-nf.mlir  expand-md-ops-nf.mlir  expand-ops.mlir  func-to-kernel-asm.mlir  hazards-cdna3-mma.mlir  hazards-extra-delays.mlir  hazards.mlir  legalize-cf-nf.mlir  legalize-cf.mlir  ll-sched-dag.mlir  ll-sched.mlir  lower-sreg-block-args.mlir  optimize.mlir  register-coloring.mlir  sched-value.mlir  set-normal-forms.mlir  to-amdgcn-func.mlir  to-amdgcn-nf.mlir  (+5 more)
test/Dialect/AsterUtils/: invalid.mlir  ops.mlir
test/Dialect/LSIR/: ops.mlir
test/Transforms/: affine-optimize-ptr-add.mlir  arith-opt.mlir  decompose-memref-iter-args.mlir  scf-pipeline-rotate-kernel.mlir
test/Upstream/: types.mlir
test/Utils/: cfg.mlir
test/integration/: by-val-store-e2e.mlir  ds-perm-e2e.mlir  test_ds_perm_e2e.py  test_per_cu_register_limit_e2e.py
test/lib/Pass/: TestHazardAnalysis.cpp
tools/: setup.sh
tools/aster-shlib/: CMakeLists.txt
(+27 files in other folders)
